Fixed styling issue on mobile view

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h2{
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 3rem auto;
+    margin: auto;
     max-width: 1000px;
     background-color: #383737;
     border-top: 1.35rem solid #ccc;
@@ -222,7 +222,7 @@ h2{
     }
 }
 
-@media (max-width:1050px){
+@media (min-width:800px){
     .comp{
         width: 50rem;
     }
@@ -242,6 +242,9 @@ h2{
     .container, .container-about{
         padding: 0 1rem;
     }
+    .comp{
+      margin: 2rem auto;  
+    }
     h1{
         font-size: 3rem;
     }
@@ -253,6 +256,9 @@ h2{
 @media(max-width:725px){
     .comp{
         width: 33rem;
+    }
+    .container-about{
+        height: 110%;
     }
     .contact-text {
         font-size: 5rem;
@@ -270,7 +276,11 @@ h2{
 @media(max-width:600px){
     .comp{
         width:29rem;
-        font-size: 1.075rem;
+        font-size: 1rem;
+    }
+    .container-about{
+        height: 100%;
+        padding:1rem;
     }
     .title-text{
         font-size: 3.75rem;
@@ -288,10 +298,8 @@ h2{
     h2{
         font-size: 1.5rem;
     }
-
     .comp{
-        width:25rem;
-        font-size: 1rem;
+        width:27rem;
     }
     .container-about{
         height: 115%;
@@ -309,20 +317,15 @@ h2{
         font-size: 1rem;
     }
 }
-
 @media(max-width:475px){
-    .container-about{
-        height: 125%;
+    .comp{
+        width:23rem;
+        font-size: 0.9rem;
     }
 }
 @media(max-width:450px){
     .comp{
         width:22rem;
-        font-size: 0.9rem;
-    }
-    .container-about{
-        height: 120%;
-        padding:1rem;
     }
     .title-text{
         font-size: 3.25rem;
@@ -334,22 +337,27 @@ h2{
 
 @media(max-width:400px){
     .comp{
-        width:20rem;
+        width:21rem;
     }
     .container-about{
-        height: 130%;
+        height: 115%;
     }
     .title-text{
         font-size: 2.9rem;
     }
 }
+@media(max-width:375px){
+    .comp{
+        width:20rem;
+    }
+    .container-about{
+        height: 120%;
+    }
+}
 
 @media(max-width:350px){
     .comp{
-        width:18rem;
-    }
-    .container-about{
-        height: 140%;
+        width:20rem;
     }
     .title-text{
         font-size: 2.15rem;
